BAW-006 - Implementing service select

--- a/src/app/customs-select/state-select/state-select.component.html
+++ b/src/app/customs-select/state-select/state-select.component.html
@@ -2,6 +2,6 @@
 <ng-select #select labelForId="state" [items]="filtered | async" [loading]="loading"
     [typeahead]="pesquisa" class="custom-select" [(ngModel)]="value" notFoundText="Não encontrei nenhum estado :("
     (change)="handleSelectState(value)">
-    <ng-template  class="container" ng-label-tmp let-item="item">{{item.descricao}}</ng-template>
-    <ng-template class="container" ng-option-tmp let-item="item">{{item.descricao}}</ng-template>
+    <ng-template  class="container" ng-label-tmp let-item="item">{{item.sigla}} - {{item.descricao}}</ng-template>
+    <ng-template class="container" ng-option-tmp let-item="item">{{item.sigla}} - {{item.descricao}}</ng-template>
 </ng-select>
