--- a/src/app/modules/operations/client/list/client-list.component.html
+++ b/src/app/modules/operations/client/list/client-list.component.html
@@ -89,6 +89,12 @@
         [ngClass]="{ hidden: dataSource.length == 0 }"
     >
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef>Código</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.id }}
+                </td>
+            </ng-container>
             <ng-container matColumnDef="nome">
                 <th mat-header-cell *matHeaderCellDef>Nome</th>
                 <td mat-cell *matCellDef="let element">
