--- a/src/app/modules/operations/schedule/form/schedule-form.component.html
+++ b/src/app/modules/operations/schedule/form/schedule-form.component.html
@@ -1,7 +1,6 @@
 <div class="absolute inset-0 flex flex-col min-w-0 overflow-hidden">
     <!-- Header -->
-    <div
-        class="
+    <div class="
             flex flex-col
             sm:flex-row
             flex-0
@@ -11,54 +10,42 @@
             border-b
             bg-card
             dark:bg-transparent
-        "
-    >
+        ">
         <div class="flex-1 min-w-0">
             <!-- Breadcrumbs -->
             <div>
                 <div class="hidden sm:flex flex-wrap items-center font-medium">
                     <div>
-                        <a class="whitespace-nowrap text-primary-500"
-                            >Autenticação</a
-                        >
+                        <a class="whitespace-nowrap text-primary-500">Autenticação</a>
                     </div>
                     <div class="flex items-center ml-1 whitespace-nowrap">
-                        <mat-icon
-                            class="icon-size-5 text-secondary"
-                            [svgIcon]="'heroicons_solid:chevron-right'"
-                        ></mat-icon>
+                        <mat-icon class="icon-size-5 text-secondary" [svgIcon]="'heroicons_solid:chevron-right'">
+                        </mat-icon>
                         <span class="ml-1 text-secondary">Agenda</span>
                     </div>
                     <div class="flex items-center ml-1 whitespace-nowrap">
-                        <mat-icon
-                            class="icon-size-5 text-secondary"
-                            [svgIcon]="'heroicons_solid:chevron-right'"
-                        ></mat-icon>
+                        <mat-icon class="icon-size-5 text-secondary" [svgIcon]="'heroicons_solid:chevron-right'">
+                        </mat-icon>
                         <span class="ml-1 text-secondary">Form</span>
                     </div>
                 </div>
                 <div class="flex sm:hidden">
-                    <a
-                        class="
+                    <a class="
                             inline-flex
                             items-center
                             -ml-1.5
                             text-secondary
                             font-medium
-                        "
-                    >
-                        <mat-icon
-                            class="icon-size-5 text-secondary"
-                            [svgIcon]="'heroicons_solid:chevron-left'"
-                        ></mat-icon>
+                        ">
+                        <mat-icon class="icon-size-5 text-secondary" [svgIcon]="'heroicons_solid:chevron-left'">
+                        </mat-icon>
                         <span class="ml-1">Back</span>
                     </a>
                 </div>
             </div>
             <!-- Title -->
             <div class="mt-2">
-                <h2
-                    class="
+                <h2 class="
                         text-3xl
                         md:text-4xl
                         font-extrabold
@@ -66,8 +53,7 @@
                         leading-7
                         sm:leading-10
                         truncate
-                    "
-                >
+                    ">
                     Formulario de Agendamento
                 </h2>
             </div>
@@ -76,60 +62,33 @@
 
     <!-- Main -->
     <div class="flex-auto p-6 sm:p-10 overflow-y-auto" cdkScrollable>
-        <form
-            class="p-4 bg-card shadow rounded overflow-hidden"
-            [formGroup]="formGroup"
-        >
+        <form class="p-4 bg-card shadow rounded overflow-hidden" [formGroup]="formGroup">
             <mat-vertical-stepper [linear]="true" #verticalStepper>
-                <mat-step
-                    [formGroupName]="'step1'"
-                    [stepControl]="formGroup.get('step1')"
-                    #verticalStepperStep1
-                >
+                <mat-step [formGroupName]="'step1'" [stepControl]="formGroup.get('step1')" #verticalStepperStep1>
                     <ng-template matStepLabel>Informações Básicas</ng-template>
-                    <div class="flex">
-                        <mat-form-field class="flex-auto">
-                            <mat-label>Serviço</mat-label>
-                            <input
-                                matInput
-                                [formControlName]="'servicoId'"
-                                [placeholder]="'Serviço'"
-                            />
-                            <mat-icon class="icon-size-5" matPrefix
-                                >settings</mat-icon
-                            >
-                            <mat-error
-                                *ngIf="
+                    <div>
+                        <service-select formControlName="servicoId"></service-select>
+                        <mat-error *ngIf="
                                     formGroup
                                         .get('step1')
                                         .get('servicoId')
                                         .hasError('required')
-                                "
-                            >
-                                Campo obrigatório
-                            </mat-error>
-                        </mat-form-field>
+                                ">
+                            Campo obrigatório
+                        </mat-error>
                     </div>
 
                     <div class="flex">
                         <mat-form-field class="flex-auto">
                             <mat-label>Cliente</mat-label>
-                            <input
-                                matInput
-                                [formControlName]="'clienteId'"
-                                [placeholder]="'Cliente'"
-                            />
-                            <mat-icon class="icon-size-5" matPrefix
-                                >person</mat-icon
-                            >
-                            <mat-error
-                                *ngIf="
+                            <input matInput [formControlName]="'clienteId'" [placeholder]="'Cliente'" />
+                            <mat-icon class="icon-size-5" matPrefix>person</mat-icon>
+                            <mat-error *ngIf="
                                     formGroup
                                         .get('step1')
                                         .get('clienteId')
                                         .hasError('required')
-                                "
-                            >
+                                ">
                                 Campo obrigatório
                             </mat-error>
                         </mat-form-field>
@@ -138,36 +97,22 @@
                     <div class="flex">
                         <mat-form-field class="flex-auto">
                             <mat-label>Hora</mat-label>
-                            <input
-                                matInput
-                                [formControlName]="'hora'"
-                                [placeholder]="'Hora'"
-                            />
-                            <mat-icon class="icon-size-5" matPrefix
-                                >schedule</mat-icon
-                            >
-                            <mat-error
-                                *ngIf="
+                            <input matInput [formControlName]="'hora'" [placeholder]="'Hora'" />
+                            <mat-icon class="icon-size-5" matPrefix>schedule</mat-icon>
+                            <mat-error *ngIf="
                                     formGroup
                                         .get('step1')
                                         .get('hora')
                                         .hasError('required')
-                                "
-                            >
+                                ">
                                 Campo obrigatório
                             </mat-error>
                         </mat-form-field>
                     </div>
 
                     <div class="flex justify-end">
-                        <button
-                            class="px-8"
-                            mat-flat-button
-                            [color]="'primary'"
-                            [disabled]="formGroup.get('step1').invalid"
-                            type="button"
-                            matStepperNext
-                        >
+                        <button class="px-8" mat-flat-button [color]="'primary'"
+                            [disabled]="formGroup.get('step1').invalid" type="button" matStepperNext>
                             Próximo
                         </button>
                     </div>
@@ -179,22 +124,10 @@
                         Formulário completo e liberado para salvar
                     </p>
                     <div class="flex justify-end mt-8">
-                        <button
-                            class="px-8 mr-2"
-                            mat-flat-button
-                            [color]="'warn'"
-                            type="button"
-                            (click)="back()"
-                        >
+                        <button class="px-8 mr-2" mat-flat-button [color]="'warn'" type="button" (click)="back()">
                             Cancelar
                         </button>
-                        <button
-                            class="px-8"
-                            mat-flat-button
-                            [color]="'primary'"
-                            type="submit"
-                            (click)="save()"
-                        >
+                        <button class="px-8" mat-flat-button [color]="'primary'" type="submit" (click)="save()">
                             Salvar
                         </button>
                     </div>
