--- a/src/app/modules/operations/schedule/list/schedule-list.component.scss
+++ b/src/app/modules/operations/schedule/list/schedule-list.component.scss
@@ -13,3 +13,8 @@ th {
 ::ng-deep .actions-cell {
     padding-left: 24px !important;
 }
+
+.canceled {
+    color: #F44336 !important;
+    font-weight: bold;
+}
