--- a/src/app/modules/operations/schedule/list/schedule-list.component.html
+++ b/src/app/modules/operations/schedule/list/schedule-list.component.html
@@ -92,13 +92,13 @@
             <ng-container matColumnDef="servicoId">
                 <th mat-header-cell *matHeaderCellDef>Serviço</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.servicoId }}
+                    {{ getElement('servico', element.service) }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="clienteId">
                 <th mat-header-cell *matHeaderCellDef>Cliente</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.clienteId }}
+                    {{ getElement('cliente', element.client) }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="hora">
@@ -110,13 +110,13 @@
             <ng-container matColumnDef="confirmado">
                 <th mat-header-cell *matHeaderCellDef>Confirmado</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.confirmado }}
+                    {{ getElement('confirmado', element.confirmado)}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="cancelado">
                 <th mat-header-cell *matHeaderCellDef>Cancelado</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.cancelado }}
+                <td [ngClass]="getClass(element)" mat-cell *matCellDef="let element">
+                    {{ getElement('cancelado', element.cancelado)}}
                 </td>
             </ng-container>
 
@@ -144,6 +144,10 @@
                         <button mat-menu-item (click)="deleteRow(element)">
                             <mat-icon>delete</mat-icon>
                             <span>Excluir</span>
+                        </button>
+                        <button mat-menu-item (click)="cancelRow(element)">
+                            <mat-icon>cancel</mat-icon>
+                            <span>Cancelar Agendamento</span>
                         </button>
                     </mat-menu>
                 </mat-cell>
