--- a/src/app/modules/operations/client/list/client-list.component.scss
+++ b/src/app/modules/operations/client/list/client-list.component.scss
@@ -13,3 +13,9 @@ th {
 ::ng-deep .actions-cell {
     padding-left: 24px !important;
 }
+
+.loading {
+    display: flex;
+    margin: 0 auto;
+    z-index: 1;
+}
