--- a/src/app/modules/operations/schedule/list/schedule-list.component.scss
+++ b/src/app/modules/operations/schedule/list/schedule-list.component.scss
@@ -18,3 +18,9 @@ th {
     color: #F44336 !important;
     font-weight: bold;
 }
+
+.loading {
+    display: flex;
+    margin: 0 auto;
+    z-index: 1;
+}
