--- a/src/app/modules/authentication/user/form/user-form.component.html
+++ b/src/app/modules/authentication/user/form/user-form.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="loading" class="loading">
+    <img src="assets/icons/loadingapp.svg" alt="Carregando...">
+</div>
+
 <div class="absolute inset-0 flex flex-col min-w-0 overflow-hidden">
     <!-- Header -->
     <div
